collision detection added

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 		var y = canvas.height-30;
 		var dx = -5;
 		var dy = -2;
+		var ballRadius = 10;
 
 		function drawBall() {
 			ctx.beginPath();
-			ctx.arc(x,y,10,0, Math.PI*2);
+			ctx.arc(x,y, ballRadius,0, Math.PI*2);
 			ctx.fillStyle = "#0095DD";
 			ctx.fill();
 			ctx.closePath();
@@ -34,6 +35,14 @@
 			drawBall();
 			x += dx;
 			y += dy;
+
+			if(y + dy < ballRadius || y + dy > canvas.height - ballRadius) {
+				dy = -dy;
+			}
+
+			if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+				dx = -dx;
+			}
 		}
 		setInterval(draw, 35);
 	</script>
