--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
 		var dx = -5;
 		var dy = -2;
 		var ballRadius = 10;
+		var paddleHeight = 10;
+		var paddleWidth = 75;
+		var paddleX = (canvas.width-paddleWidth)/2;
+		var rightPressed = false;
+		var leftPressed = false;
+
+		document.addEventListener("keydown", keyDownHandler, false);
+		document.addEventListener("keyup", keyUpHandler, false);
+
+
+		function keyDownHandler(e) {
+			if(e.keyCode == 39) {
+				rightPressed	= true;
+			}
+			else if(e.keyCode == 37) {
+				leftPressed = true;
+			}
+		}	
+
+		function keyUpHandler(e) {
+			if(e.keyCode == 39) {
+				rightPressed	= false;
+			}
+			else if(e.keyCode == 37) {
+				leftPressed	= false;
+			}
+		}	
+
 
 		function drawBall() {
 			ctx.beginPath();
@@ -30,11 +58,20 @@
 			ctx.closePath();
 		}
 
+		function drawPaddle() {
+			ctx.beginPath();
+			ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+			ctx.fillStyle = "#0095DD";
+			ctx.fill();
+			ctx.closePath();
+		}
+
 		function draw() {
 			ctx.clearRect(0,0, canvas.width, canvas.height);
 			drawBall();
-			x += dx;
-			y += dy;
+			drawPaddle();
+			//x += dx;
+			//y += dy;
 
 			if(y + dy < ballRadius || y + dy > canvas.height - ballRadius) {
 				dy = -dy;
@@ -43,6 +80,16 @@
 			if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
 				dx = -dx;
 			}
+
+			if(rightPressed && paddleX < canvas.width - paddleWidth) {
+				paddleX += 7;
+			}
+			else if(leftPressed && paddleX > 0) {
+				paddleX -= 7;
+			}
+
+			x += dx;
+			y += dy;
 		}
 		setInterval(draw, 35);
 	</script>
