--- a/index.html
+++ b/index.html
@@ -73,9 +73,20 @@
 			//x += dx;
 			//y += dy;
 
-			if(y + dy < ballRadius || y + dy > canvas.height - ballRadius) {
-				dy = -dy;
-			}
+			if(y + dy < ballRadius) {
+				dy = -2*dy; // speed doubles when ball hits paddle
+			} 
+
+			else if(y + dy > canvas.height - ballRadius) {
+					if(x > paddleX && x < paddleX + paddleWidth) {
+						dy = -dy;
+
+					}
+					else {
+						alert("Game Over");
+						document.location.reload();
+					}
+				}
 
 			if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
 				dx = -dx;
