--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 		var paddleX = (canvas.width-paddleWidth)/2;
 		var rightPressed = false;
 		var leftPressed = false;
-		var brickRowCount = 3;
+		var brickRowCount = 5;
 		var brickColumnCount = 5;
-		var brickWidth = 75;
+		var brickWidth = 65;
 		var brickHeight = 20;
 		var brickPadding = 10;
-		var brickOffsetTop = 30;
-		var brickOffsetLeft = 30;
+		var brickOffsetTop = 50;
+		var brickOffsetLeft = 55;
 
 		var bricks = [];
 		for(var c=0; c<brickColumnCount; c++) {
 			bricks[c] = [];
 			for(var r=0; r<brickRowCount; r++) {
-				bricks[c][r] = { x: 0, y: 0};
+				bricks[c][r] = { x: 0, y: 0, status: 1};
 			}
 		}
 
@@ -64,9 +64,24 @@
 			}
 		}	
 
+		function collisionDetection() {
+    for(var c=0; c<brickColumnCount; c++) {
+        for(var r=0; r<brickRowCount; r++) {
+            var b = bricks[c][r];
+            if(b.status == 1) {
+            if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+                dy = -dy;
+                b.status = 0;
+              }
+            	}
+        	}
+    		}
+			}
+
 		function drawBricks() {
 			for(var c=0; c<brickColumnCount; c++) {
 				for(var r=0; r<brickRowCount; r++) {
+					if(bricks[c][r].status == 1) {
 					var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
 					var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
 					bricks[c][r].x = brickX;
@@ -76,6 +91,7 @@
 					ctx.fillStyle = "#0095DD";
 					ctx.fill();
 					ctx.closePath();
+				}
 				}
 			}
 		}
@@ -101,6 +117,7 @@
 			drawBricks();
 			drawBall();
 			drawPaddle();
+			collisionDetection();
 			//x += dx;
 			//y += dy;
 
