--- a/index.html
+++ b/index.html
@@ -36,12 +36,25 @@
 		var changeColor = false;
 		var color = "#ff77aa";
 		var bricks = [];
+		var score = 0;
+		//var highScore = 0;
+
 		for(var c=0; c<brickColumnCount; c++) {
 			bricks[c] = [];
 			for(var r=0; r<brickRowCount; r++) {
 				bricks[c][r] = { x: 0, y: 0, status: 1};
 			}
 		}
+
+		document.addEventListener("mousemove", mouseMoveHandler, false);
+
+		function mouseMoveHandler(e) {
+			var relativeX = e.clientX - canvas.offsetLeft;
+			if(relativeX > 0+paddleWidth/2 && relativeX < canvas.width-paddleWidth/2) {
+				paddleX = relativeX - paddleWidth/2;
+			}
+		}
+
 
 		document.addEventListener("keydown", keyDownHandler, false);
 		document.addEventListener("keyup", keyUpHandler, false);
@@ -73,12 +86,30 @@
             if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                 dy = -dy;
                 changeColor = true;
-                b.status = 0;              
+                b.status = 0;
+                score++;  
+                if(score == brickRowCount*brickColumnCount) {
+                	alert("You win! Your score: "+score);
+                	//highScore = score;
+                	document.location.reload();
+                }            
               }
             }
         	}
     		}
 			}
+
+		function drawScore() {
+			ctx.font = "16px Arial";
+			ctx.fillStyle = "#0095dd";
+			ctx.fillText("Score: "+score, 8, 20);
+		}	
+
+		// function drawHighScore() {
+		// 	ctx.font = "16px Arial";
+		// 	ctx.fillStyle = "#0095dd";
+		// 	ctx.fillText("previous high score: "+highScore, 8, 40);
+		// }	
 
 		function drawBricks() {
 			for(var c=0; c<brickColumnCount; c++) {
@@ -119,6 +150,8 @@
 			drawBricks();
 			drawBall();
 			drawPaddle();
+			drawScore();
+			//drawHighScore();
 			collisionDetection();
 
 			if(y + dy < ballRadius) {
@@ -130,14 +163,15 @@
 						dy = -dy;
 					}
 					else {
-						alert("Game Over");
+						alert("Game Over! Your score: "+score);
+						//highScore = score;
 						document.location.reload();
 					}
 				}
 
 			if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
 				dx = -dx;
-				changeColor = true;
+				//changeColor = true; // wall collision color change
 			}
 
 			if(changeColor) {
