smoother animation technique added, canvas size increased

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		
-	<canvas id="myCanvas" width="480" height="320"></canvas>
+	<canvas id="myCanvas" width="720" height="480"></canvas>
 
 
 	<script>
@@ -30,14 +30,16 @@
 		var brickColumnCount = 5;
 		var brickWidth = 65;
 		var brickHeight = 20;
-		var brickPadding = 10;
-		var brickOffsetTop = 50;
-		var brickOffsetLeft = 55;
+		var brickPadding = 20;
+		var brickOffsetTop = 70;
+		var brickOffsetLeft = 155;
 		var changeColor = false;
 		var color = "#ff77aa";
 		var bricks = [];
 		var score = 0;
-		//var highScore = 0;
+		var lives = 3;
+		var highScore = 0;
+
 
 		for(var c=0; c<brickColumnCount; c++) {
 			bricks[c] = [];
@@ -83,8 +85,9 @@
         for(var r=0; r<brickRowCount; r++) {
             var b = bricks[c][r];
             if(b.status == 1) {
-            if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+            	if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                 dy = -dy;
+                dx = -dx+2;
                 changeColor = true;
                 b.status = 0;
                 score++;  
@@ -105,11 +108,17 @@
 			ctx.fillText("Score: "+score, 8, 20);
 		}	
 
-		// function drawHighScore() {
-		// 	ctx.font = "16px Arial";
-		// 	ctx.fillStyle = "#0095dd";
-		// 	ctx.fillText("previous high score: "+highScore, 8, 40);
-		// }	
+		function drawLives() {
+			ctx.font = "16px Arial";
+			ctx.fillStyle = "#0095dd";
+			ctx.fillText("Lives: "+lives, 8, 60);
+		}
+		
+		function drawHighScore() {
+			ctx.font = "16px Arial";
+			ctx.fillStyle = "#0095dd";
+			ctx.fillText("previous high score: "+highScore, 8, 40);
+		}	
 
 		function drawBricks() {
 			for(var c=0; c<brickColumnCount; c++) {
@@ -151,7 +160,8 @@
 			drawBall();
 			drawPaddle();
 			drawScore();
-			//drawHighScore();
+			drawLives();
+			drawHighScore();
 			collisionDetection();
 
 			if(y + dy < ballRadius) {
@@ -163,9 +173,20 @@
 						dy = -dy;
 					}
 					else {
-						alert("Game Over! Your score: "+score);
-						//highScore = score;
-						document.location.reload();
+						lives--;
+						if(!lives) {
+							alert("Game Over! Your score: "+score);
+							document.location.reload();
+						}
+						else {
+							x = canvas.width/2;
+							y = canvas.height-30;
+							dx = -5;
+							dy = -2;
+							paddleX = (canvas.width-paddleWidth)/2;
+							highScore = score;
+						}
+						
 					}
 				}
 
@@ -188,8 +209,9 @@
 
 			x += dx;
 			y += dy;
+			requestAnimationFrame(draw);
 		}
-		setInterval(draw, 35);
+		draw();
 	</script>
 
 	</body>
