--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		
-	<canvas id="myCanvas" width="720" height="480"></canvas>
+	<canvas id="myCanvas" width="720" height="480" style="background: url('./images/bg.jpg')"></canvas>
 
 
 	<script>
